--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,5 +1,3 @@
-<div>
-    <div *ngFor="let date of dates">
-      <div>{{date}}</div>
-    </div>
+<div class="tt-calendar-date" *ngFor="let date of dates">
+  {{date}}
 </div>
