added grid pipe and new date component

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,5 @@
-<div class="tt-calendar-date" *ngFor="let date of dates">
-  {{date}}
+<div *ngFor="let dateRow of dates | grid:7" class="tt-calendar__row">
+  <div *ngFor="let date of dateRow" class="tt-calendar-date">
+    {{date}}
+  </div>
 </div>
