--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let dateRow of dates | grid:7" class="tt-calendar__row">
-  <div *ngFor="let date of dateRow" class="tt-calendar-date">
+  <div *ngFor="let date of dateRow">
     <tt-calendar-date [date]="date"></tt-calendar-date>
   </div>
 </div>
