selection of date in calendar now linked to work information component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<tt-calendar></tt-calendar>
-<tt-work-information></tt-work-information>
+<tt-calendar (select)="onSelect($event)"></tt-calendar>
+<tt-work-information [date]="date"></tt-work-information>
