--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -5,6 +5,6 @@
 
 <div class="tt-calendar__dates">
   <div *ngFor="let dateRow of dates | grid:7" class="tt-calendar__row">
-    <tt-calendar-date *ngFor="let date of dateRow" [date]="date"></tt-calendar-date>
+    <tt-calendar-date *ngFor="let date of dateRow" [date]="date" (click)="onSelect(date)"></tt-calendar-date>
   </div>
 </div>
