created shared module and hover button blueprint

--- a/src/app/work-information/work-information.component.html
+++ b/src/app/work-information/work-information.component.html
@@ -1,5 +1,14 @@
 {{date ? date.toLocaleDateString() : 'Select da date!'}}
 
+<!-- use form! -->
+<tt-toggle-button></tt-toggle-button>
+Start: <input type="text" />
+Ende: <input type="text" />
+Pause: <input type="text" />
+Dauer: <input type="text" />
+<textarea>comment</textarea>
+Arbeitstag? <input type="checkbox" />
+<button class="btn">Save</button>
 <!--
 Tasklist
 WorkingHours
