added workinformation init mock, selection and handling to workinformation component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <tt-calendar (select)="onSelect($event)"></tt-calendar>
-<tt-work-information [date]="date"></tt-work-information>
+<tt-work-information [calendarDate]="calendarDate"></tt-work-information>
