renamed calendardate to workdateinformation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <tt-calendar (select)="onSelect($event)"></tt-calendar>
-<tt-work-information [calendarDate]="calendarDate"></tt-work-information>
+<tt-work-information [workDateInformation]="workDateInformation"></tt-work-information>
+{{printInfos()}}
