--- a/src/app/work-information/working-hours/working-hours.component.html
+++ b/src/app/work-information/working-hours/working-hours.component.html
@@ -8,7 +8,7 @@
       <span>Start</span>
     </div>
     <div class="tt-working-hours__col">
-      <input type="text" class="input" />
+      <input type="text" class="input" [(ngModel)]="workingHours.start" />
     </div>
   </div>
   <div class="tt-working-hours__row">
@@ -16,7 +16,7 @@
       <span>Ende</span>
     </div>
     <div class="tt-working-hours__col">
-      <input type="text" class="input" />
+      <input type="text" class="input" [(ngModel)]="workingHours.end" />
     </div>
   </div>
   <div class="tt-working-hours__row">
@@ -24,7 +24,7 @@
       <span>Pause</span>
     </div>
     <div class="tt-working-hours__col">
-      <input type="text" class="input" />
+      <input type="text" class="input" [(ngModel)]="workingHours.pause" />
     </div>
   </div>
 </div>
@@ -35,7 +35,7 @@
       <span>Dauer</span>
     </div>
     <div class="tt-working-hours__col">
-      <input type="text" class="input" />
+      <input type="text" class="input" [(ngModel)]="workingHours.duration" />
     </div>
   </div>
 </div>
@@ -45,6 +45,6 @@
     <span>Arbeitstag</span>
   </div>
   <div class="tt-working-hours__col">
-    <input type="checkbox" />
+    <input type="checkbox" [(ngModel)]="workingHours.isWorkingDay" />
   </div>
 </div>
