--- a/src/app/work-information/work-information.component.html
+++ b/src/app/work-information/work-information.component.html
@@ -2,7 +2,7 @@
   <div class="text-center">
     <span>{{bufferWorkDateInformation.date.toLocaleDateString()}}</span>
   </div>
-  <tt-working-hours [workingHours]="bufferWorkDateInformation.workInformation ? bufferWorkDateInformation.workInformation.workingHours : null"></tt-working-hours>
+  <tt-working-hours [workingHours]="bufferWorkDateInformation.workInformation.workingHours"></tt-working-hours>
   <div>
     <textarea class="textarea" rows="2"></textarea>
   </div>
