--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <tt-calendar (select)="onSelect($event)"></tt-calendar>
-<tt-work-information [workDateInformation]="workDateInformation"></tt-work-information>
+<tt-work-information [workInformation]="workInformation"></tt-work-information>
 {{printInfos()}}
